--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body::after {
 }
 ul {
     list-style: none;
-    margin-left: -40px;
+    margin-left: -30px;
 }
 .introList {
     text-align: left;
@@ -119,10 +119,20 @@ ul {
     height: auto;
     margin-top: 80px;
 }
+/* ======= info ======= */
+#info {
+    width: 100%;
+    margin-top: 165px;
+    /*padding-left: 15px;*/
+    font-weight: 700;
+	font-size: 16px;
+    color: red;
+    z-index: 9;
+}
 #scrollWindow {
     height: 160px;
     width: 300px;
-    margin-top: 200px;
+    margin-top: 15px;
     overflow-x: hidden;
     overflow-y: scroll;
     background-color: #eee;
@@ -143,22 +153,11 @@ ul {
 .section-title {
     margin-right: 50px;
 }
-#info {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 450px;
-	margin: 15px;
-    color: #555;
-}
 .spacer {
     font-weight: 700;
 	font-size: 32px;
 	line-height: 40px;
 }
-
-/* ======= info text ======= */
 .infoText {
     display: block;
     max-width: 300px;
@@ -167,8 +166,8 @@ ul {
     height: 120px;
     text-align: left;
 	font-weight: 700;
-	font-size: 16px;
-    line-height: 18px;
+	font-size: 18px;
+    line-height: 20px;
 }
 .labelText {
     position: fixed;
