--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ ul {
     text-align: left;
     width: 200px;
     height: 50px;
-	color: red;
+	color: #9999ff;
 	font-weight: 700;
 	font-size: 16px;
     z-index: 9;
